   tool, CompoundFileExtractor, in contrib/misc.  (Mike McCandless)

 * SOLR-3020: Add KeywordAttribute support to HunspellStemFilter. Terms marked as
   keywords are not modified by the stemmer. (Simon Willnauer, Helge Jenssen)

 * LUCENE-3305: Added Kuromoji morphological analyzer for Japanese.
   (Christian Moen, Masaru Hasegawa, Simon Willnauer, Uwe Schindler, Mike McCandless, Robert Muir)

 * LUCENE-3685: Add ToChildBlockJoinQuery and renamed previous
   BlockJoinQuery to ToParentBlockJoinQuery, so that you can now do
   joins in both parent to child and child to parent directions.
   (Mike McCandless)

API Changes

 * LUCENE-3596: DirectoryTaxonomyWriter.openIndexWriter() now takes an
   openIndexWriter parameter rather than just an open-mode. (Doron Cohen)

 * LUCENE-3606: FieldNormModifier was deprecated, because IndexReader's
   setNorm() was deprecated. Furthermore, this class is broken, as it does
   not take position overlaps into account while recalculating norms.
   (Uwe Schindler, Robert Muir)

 * LUCENE-3305: Added SegmentingTokenizerBase, which breaks text into sentences
   with BreakIterator and allows subclasses to decompose sentences into words, or
   use the sentence boundary information for other reasons (e.g. attribute/position increment)
   (Robert Muir)

Changes in runtime behavior

 * LUCENE-3626: PKIndexSplitter and MultiPassIndexSplitter now work
   per segment.  (Uwe Schindler)

Optimizations

* SOLR-2888: FSTSuggester refactoring: internal storage is now UTF-8, 
  external sorting (on disk) prevents OOMs even with large data sets
  (the bottleneck is now FST construction), code cleanups and API cleanups.
  You should use FSTCompletionLookup (the old FSTLookup impl is deprecated).
  (Dawid Weiss, Robert Muir)

Bug Fixes

 * LUCENE-3600: BlockJoinQuery now supports parent docs that have no
   children (such docs will never match, but BJQ was tripping an
   assert if such a parent doc was the first doc in the segment).